callback calling second request get pdf

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -20,11 +20,7 @@
     <div class="row" style="text-align: center;">
         <button type="button" class="btn btn-success" style="margin-left: 20px;"
                 ng-click="exportPDFPost()">
-            BUILD PDF
-        </button>
-        <button type="button" class="btn btn-success" style="margin-left: 20px;"
-                ng-click="getPDF()">
-            GET PDF
+            BUILD & GET PDF
         </button>
     </div>
     <div class="row" style="border: 1px solid red;">
